# AlgoEd_2026_1

ArbolesABB/ArbolesBinariosColaYPila/: CMakeLists.txt  main.cpp
ArbolesABB/ArbolesBinariosColaYPila/BibliotecaArbolBinarioBusqueda/: funcionesArbolBinarioBusqueda.cpp  funcionesArbolBinarioBusqueda.h
ArbolesABB/ArbolesBinariosColaYPila/BibliotecaCola/: NodoCola.h  funcionesCola.h
ArbolesABB/ArbolesBinariosColaYPila/BibliotecaPila/: NodoPila.h  funcionesPila.cpp
ArbolesABB/ArbolesBinariosTeoria/: CMakeLists.txt  main.cpp
ArbolesABB/ArbolesBinariosTeoria/BibliotecaArbolBinarioBusqueda/: ElementoArbolBinarioBusqueda.h  funcionesArbolBinarioBusqueda.cpp  funcionesArbolBinarioBusqueda.h
ArbolesABB/ArbolesBinariosTeoria/BibliotecaCola/: funcionesCola.cpp
ArbolesABB/ArbolesBinariosTeoria/BibliotecaPila/: ElementoPila.h  NodoPila.h  funcionesPila.cpp  funcionesPila.h
Divide y Venceras/EX2/2025_2_Caries/: CMakeLists.txt  main.cpp
Divide y Venceras/EX2/2025_2_Rotar/: CMakeLists.txt  main.cpp
Divide y Venceras/EjerciciosSeparata/: CMakeLists.txt  main.cpp
Divide y Venceras/EjerciciosSeparata/Bibliotecas/: funciones.cpp  funciones.h
Divide y Venceras/LAB3/2022_2_Nutricionista/: CMakeLists.txt  main.cpp
Divide y Venceras/LAB3/2023_2_TortuNinjas/: CMakeLists.txt  main.cpp
Divide y Venceras/LAB3/2024_2_ControlAcceso/: CMakeLists.txt  main.cpp
